--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -26,10 +26,10 @@
         android:id="@+id/my_favorite_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_80"
-        android:fontFamily="@font/nanum_barun_gothic"
+        android:layout_marginTop="@dimen/dp_20"
+        android:fontFamily="@font/lexend_deca"
         android:textSize="@dimen/dp_28"
-        android:text="장바구니"
+        android:text="Cart"
         android:textColor="@color/egray80"
         android:textStyle="bold"
         app:autoSizeMaxTextSize="34sp"
