--- a/app/src/main/res/layout/fragment_like.xml
+++ b/app/src/main/res/layout/fragment_like.xml
@@ -28,10 +28,10 @@
                 android:id="@+id/my_favorite_txt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_80"
-                android:fontFamily="@font/nanum_barun_gothic"
+                android:layout_marginTop="@dimen/dp_20"
+                android:fontFamily="@font/lexend_deca"
                 android:textSize="@dimen/dp_28"
-                android:text="관심 목록"
+                android:text="Wish List"
                 android:textColor="@color/egray80"
                 android:textStyle="bold"
                 app:autoSizeMaxTextSize="34sp"
