--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -1,114 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_left"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".1"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_right"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".9"/>
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/my_favorite_txt"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:fontFamily="@font/lexend_deca"
-        android:textSize="@dimen/dp_28"
-        android:text="Cart"
-        android:textColor="@color/egray80"
-        android:textStyle="bold"
-        app:autoSizeMaxTextSize="34sp"
-        app:autoSizeMinTextSize="20sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="0dp">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_left"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_right"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".9" />
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/type_txt_desc"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_12"
-        android:text="내가 구매한 제품 목록입니다."
-        android:fontFamily="@font/nanum_barun_gothic"
-        android:layout_marginTop="@dimen/dp_5"
-        android:textColor="@color/egray60"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="28sp"
-        app:autoSizeMinTextSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/my_favorite_txt"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/my_cart_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:fontFamily="@font/lexend_deca"
+            android:text="장바구니"
+            android:textColor="@color/egray80"
+            android:textSize="@dimen/dp_28"
+            android:textStyle="bold"
+            app:autoSizeMaxTextSize="34sp"
+            app:autoSizeMinTextSize="20sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_img"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-        android:scaleType="fitCenter"
-        app:lottie_rawRes="@raw/lottie_card_presents"
-        app:lottie_loop="true"
-        app:lottie_autoPlay="true"
-
-        app:layout_constraintTop_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        />
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/sad_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_15"
-        android:text="장바구니가 텅 비었어요.."
-        android:fontFamily="@font/nanum_barun_gothic"
-        android:layout_marginTop="@dimen/dp_5"
-        android:textColor="@color/egray60"
-        android:textAlignment="center"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="20sp"
-        app:autoSizeMinTextSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/lottie_img"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/cart_txt_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:fontFamily="@font/nanum_barun_gothic"
+            android:text="내가 참여한 경매들을 확인할 수 있어요."
+            android:textColor="@color/egray60"
+            android:textSize="@dimen/dp_12"
+            app:autoSizeMaxTextSize="28sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/my_cart_txt" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/today_recycler_view"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="true"
-        android:clipToPadding="true"
-        android:paddingTop="10dp"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_img"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
 
-        android:visibility="gone"
+            android:scaleType="fitCenter"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
 
-        android:paddingBottom="10dp"
-        android:layout_marginBottom="300dp"
-        app:layout_constraintTop_toBottomOf="@id/type_txt_desc"
-        tools:listitem="@layout/item_cart_list"/>
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/lottie_card_presents" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/sad_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:fontFamily="@font/nanum_barun_gothic"
+            android:text="장바구니가 텅 비었어요.."
+            android:textAlignment="center"
+            android:textColor="@color/egray60"
+            android:textSize="@dimen/dp_15"
+            android:visibility="gone"
+            app:autoSizeMaxTextSize="20sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/lottie_img" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/my_buy_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:fontFamily="@font/lexend_deca"
+            android:text="입금 대기 목록"
+            android:textColor="@color/egray80"
+            android:textSize="@dimen/dp_28"
+            android:textStyle="bold"
+            app:autoSizeMaxTextSize="34sp"
+            app:autoSizeMinTextSize="20sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/cart_txt_desc" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/buy_txt_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:fontFamily="@font/nanum_barun_gothic"
+            android:text="구매 확정된 제품 목록이에요!"
+            android:textColor="@color/egray60"
+            android:textSize="@dimen/dp_12"
+            app:autoSizeMaxTextSize="28sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/my_buy_txt" />
+
+        <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
+            android:id="@+id/bid_success_recview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/dp_10"
+            app:layout_constraintTop_toBottomOf="@id/buy_txt_desc"
+            app:msrv_gravity="start"
+            app:msrv_interval="2" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/my_bid_txt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_20"
+            android:fontFamily="@font/lexend_deca"
+            android:text="참여중인 경매"
+            android:textColor="@color/egray80"
+            android:textSize="@dimen/dp_28"
+            android:textStyle="bold"
+            app:autoSizeMaxTextSize="34sp"
+            app:autoSizeMinTextSize="20sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/bid_success_recview" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/bid_txt_desc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:fontFamily="@font/nanum_barun_gothic"
+            android:text="내가 참여했던 경매 중 아직 진행중인 경매입니다."
+            android:textColor="@color/egray60"
+            android:textSize="@dimen/dp_12"
+            app:autoSizeMaxTextSize="28sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/my_bid_txt" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cart_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="300dp"
+            android:clipChildren="true"
+            android:clipToPadding="true"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/bid_txt_desc"
+            tools:listitem="@layout/item_cart_list" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
+
