--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,217 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_left"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".1"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_right"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".9"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_center"
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent=".3"/>
-
-
-<!--    <ImageView-->
-<!--        android:id="@+id/logoimg"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:src="@drawable/user"-->
-<!--        android:layout_marginTop="@dimen/dp_10"-->
-<!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/guideline_center"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/hello_txt"-->
-<!--        />-->
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/hello_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        android:fontFamily="@font/lexend_deca"
-        android:textSize="@dimen/dp_28"
-        android:text="Home"
-        android:textColor="@color/egray80"
-        android:textStyle="bold"
-        app:autoSizeMaxTextSize="34sp"
-        app:autoSizeMinTextSize="20sp"
-        app:autoSizeTextType="uniform"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/hello_txt_desc"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_12"
-        android:text="No 1. Quality 철강 e-Marketplace 거래로 시작하세요."
-        android:fontFamily="@font/nanum_barun_gothic"
-        android:layout_marginTop="@dimen/dp_5"
-        android:textColor="@color/egray60"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="28sp"
-        app:autoSizeMinTextSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/hello_txt"
-        />
-
-    <com.zhpan.bannerview.BannerViewPager
-        android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_160"
-        android:layout_marginTop="@dimen/dp_20"
-        app:bvp_indicator_radius="@dimen/dp_4"
-        app:bvp_indicator_slide_mode="worm"
-        app:bvp_indicator_style="circle"
-        app:bvp_indicator_visibility="visible"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/hello_txt_desc"
-        tools:layout_editor_absoluteX="125dp" />
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_left"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".1" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_right"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".9" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_center"
+                android:layout_width="wrap_content"
+                android:layout_height="1dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".3" />
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/type_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_25"
-        android:text="오늘의 경매"
-        android:fontFamily="@font/nanum_barun_gothic_bold"
-        android:layout_marginTop="@dimen/dp_30"
-        android:textColor="@color/egray80"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="28sp"
-        app:autoSizeMinTextSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/banner_view"
-        />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/type_txt_desc"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_12"
-        android:text="오늘 진행되는 경매를 한눈에 확인해 보세요!"
-        android:fontFamily="@font/nanum_barun_gothic"
-        android:layout_marginTop="@dimen/dp_5"
-        android:textColor="@color/egray60"
-        app:autoSizeTextType="uniform"
-        app:autoSizeMaxTextSize="28sp"
-        app:autoSizeMinTextSize="12sp"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        app:layout_constraintTop_toBottomOf="@id/type_txt"
-        />
-
-    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
-        android:id="@+id/buttongroup"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_20"
-        app:toggle_requiredAmount="0"
-        app:toggle_selectableAmount="1"
-        app:toggle_selectAnimation="circular_reveal"
-        app:layout_constraintTop_toBottomOf="@id/type_txt_desc"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:justifyContent="center"> <!-- this attribute is from the underlying FlexboxLayout -->
-
-        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
-            android:id="@+id/primium_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_38"
-            app:toggle_backgroundColor="@color/lgray30"
-            app:toggle_btnCornerRadius="@dimen/dp_20"
-            app:toggle_selectedBackgroundColor="@color/lblue60"
-            app:toggle_selectedTextColor="@color/white"
-            app:toggle_textSize="@dimen/dp_12"
-            app:toggle_textPaddingVertical="@dimen/dp_12"
-            app:toggle_text="프리미엄"/>
-
-        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
-            android:id="@+id/auction_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="38dp"
-            app:toggle_backgroundColor="@color/lgray30"
-            app:toggle_btnCornerRadius="@dimen/dp_20"
-            app:toggle_selectedBackgroundColor="@color/lblue60"
-            app:toggle_selectedTextColor="@color/white"
-            app:toggle_textSize="@dimen/dp_12"
-            app:toggle_textPaddingVertical="@dimen/dp_12"
-            app:toggle_text="옥션"/>
-
-        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
-            android:id="@+id/outlet_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="38dp"
-            app:toggle_backgroundColor="@color/lgray30"
-            app:toggle_btnCornerRadius="@dimen/dp_20"
-            app:toggle_selectedBackgroundColor="@color/lblue60"
-            app:toggle_selectedTextColor="@color/white"
-            app:toggle_textSize="@dimen/dp_12"
-            app:toggle_textPaddingVertical="@dimen/dp_12"
-            app:toggle_text="아울렛"/>
-
-        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
-            android:id="@+id/package_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="38dp"
-            app:toggle_backgroundColor="@color/lgray30"
-            app:toggle_btnCornerRadius="@dimen/dp_20"
-            app:toggle_selectedBackgroundColor="@color/lblue60"
-            app:toggle_selectedTextColor="@color/white"
-            app:toggle_textSize="@dimen/dp_12"
-            app:toggle_textPaddingVertical="@dimen/dp_12"
-            app:toggle_text="패키지"/>
-
-    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
+            <!--    <ImageView-->
+            <!--        android:id="@+id/logoimg"-->
+            <!--        android:layout_width="0dp"-->
+            <!--        android:layout_height="0dp"-->
+            <!--        android:src="@drawable/user"-->
+            <!--        android:layout_marginTop="@dimen/dp_10"-->
+            <!--        app:layout_constraintStart_toStartOf="@id/guideline_left"-->
+            <!--        app:layout_constraintEnd_toEndOf="@id/guideline_center"-->
+            <!--        app:layout_constraintTop_toTopOf="parent"-->
+            <!--        app:layout_constraintBottom_toTopOf="@id/hello_txt"-->
+            <!--        />-->
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/today_recycler_view"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="true"
-        android:clipToPadding="true"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_marginBottom="300dp"
-        app:layout_constraintTop_toBottomOf="@id/buttongroup"
-        tools:listitem="@layout/item_product_list"/>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/hello_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                android:fontFamily="@font/lexend_deca"
+                android:text="Home"
+                android:textColor="@color/egray80"
+                android:textSize="@dimen/dp_28"
+                android:textStyle="bold"
+                app:autoSizeMaxTextSize="34sp"
+                app:autoSizeMinTextSize="20sp"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintEnd_toEndOf="@id/guideline_right"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/hello_txt_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_5"
+                android:fontFamily="@font/nanum_barun_gothic"
+                android:text="No 1. Quality 철강 e-Marketplace 거래로 시작하세요."
+                android:textColor="@color/egray60"
+                android:textSize="@dimen/dp_12"
+                app:autoSizeMaxTextSize="28sp"
+                app:autoSizeMinTextSize="12sp"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintEnd_toEndOf="@id/guideline_right"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toBottomOf="@id/hello_txt" />
+
+            <com.zhpan.bannerview.BannerViewPager
+                android:id="@+id/banner_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_160"
+                android:layout_marginTop="@dimen/dp_20"
+                app:bvp_indicator_radius="@dimen/dp_4"
+                app:bvp_indicator_slide_mode="worm"
+                app:bvp_indicator_style="circle"
+                app:bvp_indicator_visibility="visible"
+                app:layout_constraintEnd_toEndOf="@id/guideline_right"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toBottomOf="@id/hello_txt_desc"
+                tools:layout_editor_absoluteX="125dp" />
 
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/type_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_30"
+                android:fontFamily="@font/nanum_barun_gothic_bold"
+                android:text="오늘의 경매"
+                android:textColor="@color/egray80"
+                android:textSize="@dimen/dp_25"
+                app:autoSizeMaxTextSize="28sp"
+                app:autoSizeMinTextSize="20sp"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintEnd_toEndOf="@id/guideline_right"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toBottomOf="@id/banner_view" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/type_txt_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_5"
+                android:fontFamily="@font/nanum_barun_gothic"
+                android:text="오늘 진행되는 경매를 한눈에 확인해 보세요!"
+                android:textColor="@color/egray60"
+                android:textSize="@dimen/dp_12"
+                app:autoSizeMaxTextSize="28sp"
+                app:autoSizeMinTextSize="12sp"
+                app:autoSizeTextType="uniform"
+                app:layout_constraintEnd_toEndOf="@id/guideline_right"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toBottomOf="@id/type_txt" />
+
+            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
+                android:id="@+id/buttongroup"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_20"
+                app:justifyContent="center"
+                app:layout_constraintStart_toStartOf="@id/guideline_left"
+                app:layout_constraintTop_toBottomOf="@id/type_txt_desc"
+                app:toggle_requiredAmount="0"
+                app:toggle_selectAnimation="circular_reveal"
+                app:toggle_selectableAmount="1"> <!-- this attribute is from the underlying FlexboxLayout -->
+
+                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+                    android:id="@+id/primium_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dp_38"
+                    app:toggle_backgroundColor="@color/lgray30"
+                    app:toggle_btnCornerRadius="@dimen/dp_20"
+                    app:toggle_selectedBackgroundColor="@color/lblue60"
+                    app:toggle_selectedTextColor="@color/white"
+                    app:toggle_text="프리미엄"
+                    app:toggle_textPaddingVertical="@dimen/dp_12"
+                    app:toggle_textSize="@dimen/dp_12" />
+
+                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+                    android:id="@+id/auction_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    app:toggle_backgroundColor="@color/lgray30"
+                    app:toggle_btnCornerRadius="@dimen/dp_20"
+                    app:toggle_selectedBackgroundColor="@color/lblue60"
+                    app:toggle_selectedTextColor="@color/white"
+                    app:toggle_text="옥션"
+                    app:toggle_textPaddingVertical="@dimen/dp_12"
+                    app:toggle_textSize="@dimen/dp_12" />
+
+                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+                    android:id="@+id/outlet_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    app:toggle_backgroundColor="@color/lgray30"
+                    app:toggle_btnCornerRadius="@dimen/dp_20"
+                    app:toggle_selectedBackgroundColor="@color/lblue60"
+                    app:toggle_selectedTextColor="@color/white"
+                    app:toggle_text="아울렛"
+                    app:toggle_textPaddingVertical="@dimen/dp_12"
+                    app:toggle_textSize="@dimen/dp_12" />
+
+                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
+                    android:id="@+id/package_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    app:toggle_backgroundColor="@color/lgray30"
+                    app:toggle_btnCornerRadius="@dimen/dp_20"
+                    app:toggle_selectedBackgroundColor="@color/lblue60"
+                    app:toggle_selectedTextColor="@color/white"
+                    app:toggle_text="패키지"
+                    app:toggle_textPaddingVertical="@dimen/dp_12"
+                    app:toggle_textSize="@dimen/dp_12" />
+
+            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/today_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="300dp"
+                android:clipChildren="true"
+                android:clipToPadding="true"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/buttongroup"
+                tools:listitem="@layout/item_product_list" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 </layout>
