--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -129,7 +129,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_alignBottom="@id/prd_totseqNm"
                         android:layout_alignParentRight="true"
                         android:fontFamily="@font/lexend_deca"
-                        android:text="12,000"
+                        android:text="@{`₩` + prdlist.bidPrice.toString()}"
                         android:textColor="@color/egray80"
                         android:textSize="20dp"
                         android:textStyle="bold" />
