keyboard is babo

--- a/app/src/main/res/layout/item_cart_bid_success_list.xml
+++ b/app/src/main/res/layout/item_cart_bid_success_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="prdlist"
-            type="com.esteel4u.realtimeauctionapp.data.model.ProductData"/>
+            type="com.esteel4u.realtimeauctionapp.model.data.ProductData"/>
     </data>
 
     <androidx.cardview.widget.CardView
