--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -11,11 +11,11 @@ too. layout_gravity="center_horizontal" is a lot simpler.
     <data>
         <variable
             name="prdlist"
-            type="com.esteel4u.realtimeauctionapp.data.model.ProductData"/>
+            type="com.esteel4u.realtimeauctionapp.model.data.ProductData"/>
 
         <variable
-            name="biduserlist"
-            type="com.esteel4u.realtimeauctionapp.data.model.BidUserList"/>
+            name="auctiondata"
+            type="com.esteel4u.realtimeauctionapp.model.data.AuctionData"/>
 
     </data>
 
@@ -75,20 +75,22 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                     <!--                        app:tint="@color/lblue60" />-->
 
 
-                    <ImageView
+                    <com.airbnb.lottie.LottieAnimationView
                         android:id="@+id/status_img"
                         android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@id/prd_auction_type"
                         android:layout_alignBottom="@id/prd_totseqNm"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/android_icon" />
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"
+                        app:lottie_rawRes="@raw/lottie_sadface" />
 
                     <TextView
                         android:id="@+id/prd_auction_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginLeft="@dimen/dp_10"
                         android:layout_toRightOf="@id/status_img"
                         android:fontFamily="@font/nanum_barun_gothic"
                         android:text="프리미엄"
@@ -102,13 +104,34 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_auction_type"
-                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginLeft="@dimen/dp_10"
                         android:layout_marginTop="5dp"
                         android:layout_toRightOf="@id/status_img"
                         android:fontFamily="@font/nanum_barun_gothic"
-                        android:text="주무뇌"
-                        android:textSize="12dp" />
+                        android:text="주문외 2급"
+                        android:textSize="10dp" />
 
+                    <TextView
+                        android:id="@+id/line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/prd_auction_type"
+                        android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@id/prd_totseqNm"
+                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:text=" | "
+                        android:textSize="10dp" />
+
+                    <TextView
+                        android:id="@+id/prd_no"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/prd_auction_type"
+                        android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@id/line"
+                        android:fontFamily="@font/nanum_barun_gothic"
+                        android:text="@{prdlist.prdNo.toString()}"
+                        android:textSize="10dp" />
 
                     <TextView
                         android:id="@+id/auc_bid_txt"
@@ -129,7 +152,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_alignBottom="@id/prd_totseqNm"
                         android:layout_alignParentRight="true"
                         android:fontFamily="@font/lexend_deca"
-                        android:text="@{`₩` + prdlist.bidPrice.toString()}"
+
                         android:textColor="@color/egray80"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -146,68 +169,11 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:orientation="vertical"
                         android:showDividers="middle">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="14dp">
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="제품 ID : "
-                                    android:textSize="12dp" />
-
-                                <TextView
-                                    android:id="@+id/prd_id"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="@{prdlist.prdId}"
-                                    android:textSize="12dp" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
 
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:padding="14dp">
 
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:orientation="horizontal">
 
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="제품 번호 : "
-                                    android:textSize="12dp" />
 
-                                <TextView
-                                    android:id="@+id/material_lotno"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="@{prdlist.prdNo}"
-                                    android:textSize="12dp" />
-
-                            </LinearLayout>
-
-                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -308,7 +274,6 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="@{prdlist.prdWth.toString()}"
                                     android:textSize="12dp" />
                             </LinearLayout>
 
@@ -330,10 +295,44 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/nanum_barun_gothic"
-                                    android:text="@{prdlist.prdWgt.toString()}"
                                     android:textSize="12dp" />
                             </LinearLayout>
                         </LinearLayout>
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:padding="14dp">
+
+
+                            <LinearLayout
+                                android:layout_weight="1"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:gravity="center">
+
+                                <com.google.android.material.button.MaterialButton
+                                    android:id="@+id/bid_button"
+                                    android:layout_height="wrap_content"
+                                    android:layout_width="@dimen/dp_250"
+                                    android:text="Place a Bid"
+                                    android:fontFamily="@font/lexend_deca"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/white"
+                                    style="@style/MyButtonShapeRounded"
+                                    app:cornerRadius="30dp"
+                                    android:insetBottom="2dp"
+                                    android:insetTop="3dp"
+                                    android:textAllCaps="false"
+                                    android:backgroundTint="@color/lblue60"
+                                    android:gravity="center"/>
+
+                            </LinearLayout>
+                        </LinearLayout>
+
 
                     </LinearLayout>
 
